# object_detection_ros2

./: CMakeLists.txt  README.md  package.xml
config/: laserfilter_angle.yaml  laserfilter_box2.yaml
examples/: laserfilter_angle.yaml
launch/: filter_test.py  laser_angle_filter_launch.py  pcl_object_detection_launch.launch.py  test_cluster.py  view_rplidar_s2_launch.py  view_rplidar_s2_launch_copy.py
rviz/: rplidar_ros2.rviz
src/: kalman_filter_wrapper.cpp  pcl_object_detection.cpp  pcl_object_detection.hpp  pcl_object_detection_opti_.cpp  rplidar_scan_publisher.cpp
